@@ -15,6 +15,7 @@ v8.0.33
 - WL#15483: Support OCI ephemeral key-based authentication
 - WL#15435: Improve the logging system
 - WL#15401: Support for type hints in module mysqlx
+- BUG#35233031: Connector/Python should not default to mysql_native_password
 - BUG#35015758: COM_QUIT should not be called in the connection phase
 - BUG#34984850: Fix binary conversion with NO_BACKSLASH_ESCAPES mode
 - BUG#31355895: Fix slow executemany() with insert statements
